tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__UpgradeBetterMac-AAAAAAAAAAAAAAAAAAAAOg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 58,
  "prerequisites": [
    50,
    948,
    76
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An updated version of the steam macerator. Uses the same total amount of steam as its predecessor but does the job twice as fast.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lUpgrade: Better Macerator",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    50,
    948,
    76
  ],
  "rewards": [],
  "tasks": []
}
