tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier05Steam-AAAAAAAAAAAAAAAAAAAAAg==__UpgradeHighSpeed-AAAAAAAAAAAAAAAAAAAALw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 47,
  "prerequisites": [
    948,
    76,
    46
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Like most machines, there is a more advanced version of the alloy smelter. It uses the same total amount of steam as its predecessor but does the job twice as fast.\n\nKeep in mind that it uses quite a lot of steam, so you better have enough of it in boilers, pipes, or tanks.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§3§lUpgrade: High Speed Alloys",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    948,
    76,
    46
  ],
  "rewards": [],
  "tasks": []
}
